--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@
       // "Group2": ["Center_100%_LowContrast"],
       // "Group3": ["Left_100%_Plain"],
       // "Group4": ["Right_100%_Plain"],
-      "Group5": ["Up_100%_Plain"],
+      // "Group5": ["Up_100%_Plain"],
       // "Group6": ["Down_100%_Plain"],
       // "Group7": ["Center_125%_Plain"],
       // "Group8": ["Center_75%_Plain"],
       // "Group9": ["Center_100%_PatternHoriz"],
       // "Group10": ["Center_100%_PatternVert"],
-      // "Group11": ["Center_100%_Messy"],
+      "Group11": ["Center_100%_Messy"],
     };
     function getRandomElement(a) { return a[Math.floor(Math.random() * a.length)]; }
 
